fix: invisible sidebar covering page content

--- a/src/app/shared/layout/navbar/navbar.component.css
+++ b/src/app/shared/layout/navbar/navbar.component.css
@@ -1,10 +1,16 @@
 nav {
-  min-width: 200px;
+  /* min-width: 200px; */
   display: flex;
   position: fixed;
   top: 0;
-  left: 0;
+  left: -200px;
   bottom: 0;
+  transition: 0.5s ease-in-out;
+}
+
+.nav--show {
+  left: 0px;
+  transition: 0.5s ease-in-out;
 }
 
 .nav__list {
@@ -12,18 +18,18 @@ nav {
   display: flex;
   flex-grow: 1;
   flex-direction: column;
-  align-items: center;
   gap: 8px;
-  padding-top: 40px;
-  transform: translateX(-100%);
-  transition: 0.5s ease-in-out;
-}
-.nav__list--show {
-  transform: translateX(0);
-  transition: 0.5s ease-in-out;
+  padding-top: 48px;
+  min-width: 200px;
 }
 .nav__item {
   padding: 3px 5px;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.nav__item.nav__item--home {
+  font-weight: bold;
 }
 .nav__item a {
   text-decoration: none;
@@ -38,7 +44,7 @@ nav {
 }
 
 .nav__toggle {
-  position: absolute;
+  position: fixed;
   top: 20px;
   left: 30px;
   cursor: pointer;
@@ -82,9 +88,9 @@ nav {
   transition: 0.5s ease-in-out;
 }
 .nav__toggle--close {
-  position: absolute;
+  position: fixed;
   top: 20px;
-  left: 80%;
+  left: 160px;
   transition: 0.5s ease-in-out;
 }
 .nav__toggle--close .nav__toggle-btn {
